2025-11-26 Franz Holzinger  <franz@ttproducts.de>
    * Version number 1.0.0. It is stable enough for most use cases. Working under Doctrine.
    * Replace Direct Mail extension by Mail

2025-11-01 Franz Holzinger  <franz@ttproducts.de>
    * Rename folder and domain part Domain into Database for a difference to Extbase
    * fix namespace for PageRepository: TYPO3\CMS\Core\Domain\Repository\PageRepository .
    * fix empty password by Cookie error: Show error message.

2025-08-03 Franz Holzinger  <franz@ttproducts.de>
    * Deprecation no. 105076. Convert plugin list_type agency => CType agency

2025-07-18 Franz Holzinger  <franz@ttproducts.de>
    * Compatibility 13: It works.
    * add TEMPLATE_REFUSE_PREVIEW and labels for refuse

2025-07-07 Franz Holzinger  <franz@ttproducts.de>
    * bugfix for TYPO3 8.7: replace the deprecated $GLOBALS['TSFE']->sys_page->getRecordsByField by  \TYPO3\CMS\Frontend\Page\PageRepository::getRecordsByField

2025-06-20 Franz Holzinger  <franz@ttproducts.de>
    * Compatibility 13, Breaking no. 102605: TSFE->fe_user removed

2025-01-07  Franz Holzinger  <franz@ttproducts.de>
    * Deprecation no. 97126: TCEforms removed in FlexForm

2024-12-05 Franz Holzinger  <franz@ttproducts.de>
    compatibility 13: Use JambageCom\Div2007\Compatibility\AbstractPlugin
        instead of TYPO3\CMS\Frontend\Plugin\AbstractPlugin

2024-04-14 Franz Holzinger  <franz@ttproducts.de>
    Remove file class.tx_agency.php again which is deprecated since TYPO3 8 for addPItoST43.

2024-03-81 Franz Holzinger  <franz@ttproducts.de>
    Do not use sanitizer for template file which can be in private folder.

2024-02-28 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no. 87193: function compareUident removed
    Breaking no. 87193: TYPO3\CMS\Core\Crypto\PasswordHashing\SaltedPasswordService has been removed.
    Fix autologin

2024-01-24 Franz Holzinger  <franz@ttproducts.de>
    Deprecation no.81852: - Remove usage of classes