@@ -8,9 +8,6 @@ imageTypes = png, jpg, jpeg, gif, tif, tiff
   # cat=basic; type=int+; label=Maximun image size: Specify the maximum size of uploaded image files, in number of KB's. Default is 500.
 imageMaxSize = 500
 
-  # cat=directMail; type=boolean; label=Support Mail: You must set this only when Mail is not installed at the moment, and if you still want to use the Mail tables in the BE and FE. The Mail database tables must have been generated by a former installation of Direct Mail. Do not enable this checkbox if the tables needed by Direct Mail are missing! Install Mail at first, add the tables in the Install Tool and deinstall it immediately afterwards again.
-enabletMail = 0
-
   # cat=basic; type=boolean; label=Gender is set by default: This will force the gender to be set to 0 for male and 1 for female. If set no undefined gender is allowed.
 forceGender = 0
 
